Use Google Drive image URL instead of local file for hero background

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,7 @@ body, html, .App {
 /* Hero Header with Background Image */
 .hero-header {
   position: relative;
-  background-image: url('/siblings.png');
+  background-image: url('https://drive.google.com/uc?export=view&id=1INxHuX3cEY-li0fhZoBlf8HUqOjfd83a');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
